// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Node with no categories should match snapshot 1`] = `
<View
  style={
    Object {
      "height": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "#abc",
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "space-between",
        "paddingHorizontal": 8,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="test-back"
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/assets/left.png",
            }
          }
        />
      </View>
    </View>
    <Text
      style={
        Object {
          "alignItems": "center",
          "fontSize": 20,
          "fontWeight": "bold",
          "left": "40%",
          "position": "relative",
        }
      }
    >
      Add Notes
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="test-save"
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/assets/save.png",
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "borderColor": "#eeeee4",
          "borderWidth": 2,
          "height": "80%",
          "marginHorizontal": 16,
          "padding": 16,
        }
      }
    >
      <TextInput
        autoFocus={true}
        multiline={true}
        onChangeText={[Function]}
        placeholder="Type here for making notes"
        selectionColor="#000"
        style={
          Object {
            "fontSize": 20,
          }
        }
        testID="text-input-notes"
        value=""
      />
    </View>
  </View>
</View>
`;

exports[`Create Note should match snapshot 1`] = `
<View
  style={
    Object {
      "height": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "#abc",
        "flexDirection": "row",
        "height": 50,
        "justifyContent": "space-between",
        "paddingHorizontal": 8,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="test-back"
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/assets/left.png",
            }
          }
        />
      </View>
    </View>
    <Text
      style={
        Object {
          "alignItems": "center",
          "fontSize": 20,
          "fontWeight": "bold",
          "left": "40%",
          "position": "relative",
        }
      }
    >
      Add Notes
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="test-save"
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/assets/save.png",
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "height": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "borderColor": "#eeeee4",
          "borderWidth": 2,
          "height": "80%",
          "marginHorizontal": 16,
          "padding": 16,
        }
      }
    >
      <TextInput
        autoFocus={true}
        multiline={true}
        onChangeText={[Function]}
        placeholder="Type here for making notes"
        selectionColor="#000"
        style={
          Object {
            "fontSize": 20,
          }
        }
        testID="text-input-notes"
        value=""
      />
    </View>
    <View>
      <View
        style={
          Array [
            Object {
              "width": "100%",
            },
            Object {
              "zIndex": 5000,
            },
            Object {},
          ]
        }
      >
        <View
          accessibilityState={
            Object {
              "disabled": false,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          forwardedRef={[Function]}
          onClick={[Function]}
          onLayout={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "borderColor": "#000",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 50,
              "opacity": 1,
              "paddingHorizontal": 10,
              "paddingVertical": 3,
              "width": "100%",
              "zIndex": 5000,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#000",
                  "flex": 1,
                },
                Object {},
                false,
                Object {},
              ]
            }
          >
            Choose category
          </Text>
          <View
            style={
              Array [
                Object {
                  "marginLeft": 10,
                },
                Object {},
              ]
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../react-native-dropdown-picker/src/themes/light/icons/arrow-down.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 20,
                    "width": 20,
                  },
                  Object {},
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
